<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bluefox2_ros</name>
  <version>1.0.0</version>
  <description>The ROS meta-package to complement the bluefox2 package</description>
  <maintainer email="jmuletal@gmail.com">jamu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>diagnostic_updater</build_depend>

  <exec_depend>bluefox2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
